home page upadted

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,16 @@
       @apply bg-background text-foreground;
     }
   }
+
+@keyframes carousel {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-carousel {
+  animation: carousel 30s linear infinite;
+}
